--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           <p class="bio-text">im black as fuck</p>
       </div>
       <div class="socials">
-          <a class="tooltip" href="https://discord.com" target="_blank">
-              <span class="tooltiptext">lewidc</span>
+          <a class="tooltip" href="https://discord.gg/hate" target="_blank">
+              <span class="tooltiptext">discord</span>
               <img class="social-icons" src="https://cdn.discordapp.com/attachments/1119372837619257565/1166854579812577320/image-removebg-preview_4_1.png?ex=654c0102&is=65398c02&hm=e35192f2f5e309cb6a94afc9186a451aba9348ca9b8832c6f7364de1b39df3aa&" alt="Discord Icon">
           </a>
           <a class="tooltip" href="https://www.instagram.com/levw/" target="_blank">
