--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>simo</title>
+    <title>lew</title>
     <meta content="eliseo.lol" property="og:title" />
     <meta content="my name is lew and im a black thug" property="og:description" />
     <meta content="eliseo.lol" property="og:url" />
