--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <img class="pfp-image" src="https://cdn.discordapp.com/attachments/1170184368153690123/1170867056657322024/4B9EB03A-945E-4D99-816D-8E9932BD6667.gif?ex=655a99eb&is=654824eb&hm=a38c5e25acb25d9e5b898565e375c1bb246b9dbe1401ed1cd2d4330b10b1138c&" alt="pfp">
               <p class="username"><span class="sparkle">eli</span></p>
           </div>
-          <p class="bio-text">im black as fuck</p>
+          <p class="bio-text">brawlhalla pro</p>
       </div>
       <div class="socials">
           <a class="tooltip" href="https://discord.gg/hate" target="_blank">
